js/js.translator/testData/incremental/invalidation/companionConstVal/lib2/simpleFunction.0.6.kt
fun simpleFunction(): String {
    return "${Class.CONST_VALUE}"
}
